deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
      - name: digiresume
        image: sharanch/digiresume:latest
        imagePullPolicy: Always  
        ports:
        - containerPort: 80           
---
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  selector:
    app: resume
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: resume.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resume-service
            port:
              number: 80
